Updates for 2019 Sponsors (#3)
Updated the Sponsors for 2019
Also used CSS to make the small logos in the footer white, no longer a need for small sponsor logo images so I deleted them from the filesystem.

--- a/www/css/mcr.css
+++ b/www/css/mcr.css
@@ -12,7 +12,9 @@ h2.mcr_title {
 
 .small_sponsors img{
   margin: 0px 20px 10px 20px;
-  width:100px;
+  width:75px;
+  -webkit-filter: brightness(0%) invert(1);
+  filter: brightness(0%) invert(1); /*Should make them white*/
 }
 
 /*.btn.btn-darkBg:hover{
